full revamp of homepage

--- a/frontend/src/components/Welcome.css
+++ b/frontend/src/components/Welcome.css
@@ -29,7 +29,10 @@
     80% {
         content: "Bienvenue";
     }
+    90% {
+        content: "Benarrivato";
+   }
     100% {
         content: "Benarrivato";
-  }
+    }
   }
