minor adjustments made to the translated words css

--- a/frontend/src/components/Translate.css
+++ b/frontend/src/components/Translate.css
@@ -4,12 +4,11 @@
   justify-content: center;
   color: #1a75d2;
   font-size: 10;
-
+  gap: 10px;
 
 }
-.definedWords:hover {
+.definedWord:hover {
   color: rgb(0, 0, 188);
-  text-decoration: underline;
   cursor: pointer;
 }
 
